# nue

./: Cargo.toml  README.md  build.rs
.github/: CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml  release.yaml
nue/: Cargo.toml
nue-common/: Cargo.toml
nue-common/src/: constants.rs  env_programs_dir.rs  globals.rs  lib.rs
nue-resources/: Cargo.toml
nue-resources/resources/: env.ps1
nue-resources/src/: lib.rs
nue-types/: Cargo.toml
nue-types/src/: lib.rs  platforms.rs
nue-types/src/node/: lts.rs  mod.rs  release.rs
nue-utils/: Cargo.toml
nue-utils/src/: hyperlink.rs  lib.rs
nue/src/: lib.rs  main.rs
nue/src/commands/: clean.rs  env.rs  install.rs  list.rs  mod.rs  uninstall.rs
resources/: env.ps1  env.sh
src/: constants.rs  globals.rs  main.rs
src/cli/: clean.rs  env.rs  install.rs  list.rs  mod.rs  uninstall.rs
src/exts/: hyperlink.rs  mod.rs
src/types/: mod.rs  node_version.rs  platforms.rs  temp.rs
src/types/node/: lts.rs  mod.rs  release.rs  urls.rs  version.rs
src/utils/: cache.rs  check.rs  mod.rs  random.rs
