[package]
name = "nue"
description = "Node installer, made properly."
version = "0.0.0"
edition = "2021"
rust-version = "1.80.0"

[profile.release]
opt-level = "z"
strip = "debuginfo"
lto = "fat"

[lints.clippy]
nursery = "warn"
unused_trait_names = "warn"
std_instead_of_core = "warn"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
demand = "1.6.2"
dirs = "6.0.0"
node-semver = { git = "https://github.com/felipesere/node-semver-rs" }
serde = { version = "1.0.217", features = ["derive"] }
ureq = { version = "3.0.5", features = ["json"] }

[patch."https://github.com/felipesere/node-semver-rs"]
node-semver = { git = "https://github.com/catuhana/node-semver-rs" }

[target.'cfg(unix)'.dependencies]
binstall-tar = "0.4.42"
liblzma = "0.3.5"

[target.'cfg(windows)'.dependencies]
# Let's pin its version because the GitHub
# source is not accessible anymore.
sevenz-rust = "=0.6.1"
