[workspace]
resolver = "3"
members = ["nue", "nue-common", "nue-resources", "nue-types", "nue-utils"]

[workspace.package]
repository = "https://github.com/catuhana/nue"
authors = ["tuhana <tuhana.cat+git@gmail.com>"]
license = "MPL-2.0"
version = "0.1.1"
edition = "2024"
rust-version = "1.86"

[profile.release]
lto = "thin"
opt-level = "z"
strip = "debuginfo"

[workspace.lints.clippy]
nursery = "warn"
unused_trait_names = "warn"

[workspace.dependencies]
anyhow = "1.0.98"
node-semver = { git = "https://github.com/catuhana/node-semver-rs", rev = "0f374a24482d1fa187c6fa664f02b70316cfeef5" }
serde = "1.0.219"
